Corrections and OG image

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
     <title>Vaals Stemt</title>
   </head>
   <body>
